2001-03-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/check.c: Bill contributed more checks on group/compliance
	statements.

	* lib/check.c: Fixed core dump with recent type checks. Thanks
	to Bill.

2001-03-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.14.tar.gz: released version 0.2.14.

	* lib/check.c: Added more type usage checks.

2001-03-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Added some defval and type usage checks.

2001-03-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Added checks to compare SEQUENCEs against
	columnar objects.

2001-02-26  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/check.c: Lowered severity of recent compliant status checks.

	* lib/parser-smi.y: Bill contributed check for imported Counter64
	when used.

	* lib/check.c: Bill contributed check for node >= group >= compliance
	status constraints.

2001-02-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/scanner-smi.l: Martin Schulz noticed a problem with
	the use of the isspace() macro on Solaris. Thanks.

2001-02-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/PINT-MIB: added (RFC 3055).

2001-02-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/IPV6-MLD-MIB: added (RFC 3019).

2001-01-26  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Martin Schulz fixed setting of UNITS
	of OBJECT-TYPEs. Thanks!

2001-01-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.13.tar.gz: released version 0.2.13.

	* tools/dump-netsnmp.c: Juergen added support for manager stub
	code.

2001-01-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: Null pointer fixes from Juergen.

	* tools/dump-perl.c: Martin Schulz <schulz@videotron.ca> contributed
	a perl driver, based on the python driver. It maps each and every
	piece of information to a string, even dates and and numerical
	values. However, maybe it is useful to some people.
